# os_lab_4

./: .gitignore  CMakeLists.txt  README.md
doc/: report.odt
include/: gcf-pi.h
src/: dynamic-main.cpp  gcf-pi1.c  gcf-pi2.c  static-main.cpp
